--- a/manifests/app/backend.yaml
+++ b/manifests/app/backend.yaml
@@ -2,6 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-app
+  labels:
+    app: backend
+  annotations:
+    sidecar.jaegertracing.io/inject: "true"
 spec:
   replicas: 3
   selector:
@@ -26,6 +30,6 @@ spec:
   selector:
     app: backend
   ports:
-    - port: 80
+    - port: 8081
       targetPort: 8080
   type: LoadBalancer
