--- a/manifests/app/trial.yaml
+++ b/manifests/app/trial.yaml
@@ -2,6 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: trial-app
+  annotations:
+    sidecar.jaegertracing.io/inject: "true"
+  labels:
+    app: trial
 spec:
   replicas: 3
   selector:
@@ -14,7 +18,7 @@ spec:
     spec:
       containers:
       - name: trial
-        image: ghcr.io/thejaysmith/trial:v1
+        image: minorpatch/metrics-dashboard-trial:latest
         ports:
         - containerPort: 8080
 ---
@@ -26,6 +30,6 @@ spec:
   selector:
     app: trial
   ports:
-    - port: 8080
+    - port: 8083
       targetPort: 8080
   type: LoadBalancer
