--- a/reference-app/trial/requirements.dev.txt
+++ b/reference-app/trial/requirements.dev.txt
@@ -113,6 +113,8 @@ platformdirs==2.4.0
     #   pylint
 pluggy==1.0.0
     # via pytest
+prometheus-client==0.12.0
+    # via -r requirements\common.in
 protobuf==3.19.1
     # via googleapis-common-protos
 py==1.10.0
