--- a/reference-app/trial/requirements.txt
+++ b/reference-app/trial/requirements.txt
@@ -76,6 +76,8 @@ opentelemetry-util-http==0.25b2
     #   opentelemetry-instrumentation-wsgi
 opentracing==2.4.0
     # via jaeger-client
+prometheus-client==0.12.0
+    # via -r requirements\common.in
 protobuf==3.19.1
     # via googleapis-common-protos
 requests==2.23.0
