--- a/manifests/app/backend.yaml
+++ b/manifests/app/backend.yaml
@@ -2,10 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-app
-  labels:
-    app: backend
   annotations:
     sidecar.jaegertracing.io/inject: "true"
+  labels:
+    app: backend
 spec:
   replicas: 3
   selector:
@@ -17,10 +17,10 @@ spec:
         app: backend
     spec:
       containers:
-      - name: backend
-        image: ghcr.io/thejaysmith/backend:v1
-        ports:
-        - containerPort: 8080
+        - name: backend
+          image: minorpatch/metrics-dashboard-backend:latest
+          ports:
+            - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
