--- a/manifests/app/frontend.yaml
+++ b/manifests/app/frontend.yaml
@@ -2,6 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend-app
+  annotations:
+    sidecar.jaegertracing.io/inject: "true"
+  labels:
+    app: frontend
 spec:
   replicas: 3
   selector:
@@ -13,10 +17,10 @@ spec:
         app: frontend
     spec:
       containers:
-      - name: frontend
-        image: ghcr.io/thejaysmith/myfrontend:v1
-        ports:
-        - containerPort: 8080
+        - name: frontend
+          image: minorpatch/metrics-dashboard-frontend:latest
+          ports:
+            - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
