--- a/manifests/app/frontend.yaml
+++ b/manifests/app/frontend.yaml
@@ -26,10 +26,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
+  labels:
+    app: frontend
 spec:
   selector:
     app: frontend
   ports:
-    - port: 8082
+    - name: frontend
+      port: 8082
       targetPort: 8080
   type: LoadBalancer
