--- a/manifests/app/trial.yaml
+++ b/manifests/app/trial.yaml
@@ -17,19 +17,22 @@ spec:
         app: trial
     spec:
       containers:
-      - name: trial
-        image: minorpatch/metrics-dashboard-trial:latest
-        ports:
-        - containerPort: 8080
+        - name: trial
+          image: minorpatch/metrics-dashboard-trial:latest
+          ports:
+            - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: trial-service
+  labels:
+    app: trial
 spec:
   selector:
     app: trial
   ports:
-    - port: 8083
+    - name: trial
+      port: 8083
       targetPort: 8080
   type: LoadBalancer
