--- a/reference-app/backend/requirements/common.in
+++ b/reference-app/backend/requirements/common.in
@@ -1,12 +1,7 @@
 flask==2
 requests
+pymongo
 jaeger-client 
 prometheus-client
-opentelemetry-api
-opentelemetry-sdk
-opentelemetry-instrumentation
-opentelemetry-instrumentation-flask
-opentelemetry-instrumentation-requests
-opentelemetry-exporter-jaeger
-pymongo
+flask-opentracing
 flask-pymongo
