--- a/reference-app/frontend/requirements.dev.txt
+++ b/reference-app/frontend/requirements.dev.txt
@@ -25,16 +25,14 @@ colorama==0.4.4
     #   click
     #   pylint
     #   pytest
-deprecated==1.2.13
-    # via opentelemetry-api
 flake8==4.0.1
     # via -r requirements/develop.in
 flask==2
+    # via
+    #   -r requirements\common.in
+    #   flask-opentracing
+flask-opentracing==1.1.0
     # via -r requirements\common.in
-googleapis-common-protos==1.53.0
-    # via opentelemetry-exporter-jaeger-proto-grpc
-grpcio==1.41.1
-    # via opentelemetry-exporter-jaeger-proto-grpc
 idna==3.3
     # via requests
 iniconfig==1.1.1
@@ -57,52 +55,10 @@ mccabe==0.6.1
     #   pylint
 mypy-extensions==0.4.3
     # via black
-opentelemetry-api==1.6.2
-    # via
-    #   -r requirements\common.in
-    #   opentelemetry-exporter-jaeger-proto-grpc
-    #   opentelemetry-exporter-jaeger-thrift
-    #   opentelemetry-instrumentation
-    #   opentelemetry-instrumentation-flask
-    #   opentelemetry-instrumentation-requests
-    #   opentelemetry-instrumentation-wsgi
-    #   opentelemetry-sdk
-opentelemetry-exporter-jaeger==1.6.2
-    # via -r requirements\common.in
-opentelemetry-exporter-jaeger-proto-grpc==1.6.2
-    # via opentelemetry-exporter-jaeger
-opentelemetry-exporter-jaeger-thrift==1.6.2
-    # via opentelemetry-exporter-jaeger
-opentelemetry-instrumentation==0.25b2
-    # via
-    #   -r requirements\common.in
-    #   opentelemetry-instrumentation-flask
-    #   opentelemetry-instrumentation-requests
-    #   opentelemetry-instrumentation-wsgi
-opentelemetry-instrumentation-flask==0.25b2
-    # via -r requirements\common.in
-opentelemetry-instrumentation-requests==0.25b2
-    # via -r requirements\common.in
-opentelemetry-instrumentation-wsgi==0.25b2
-    # via opentelemetry-instrumentation-flask
-opentelemetry-sdk==1.6.2
-    # via
-    #   -r requirements\common.in
-    #   opentelemetry-exporter-jaeger-proto-grpc
-    #   opentelemetry-exporter-jaeger-thrift
-opentelemetry-semantic-conventions==0.25b2
-    # via
-    #   opentelemetry-instrumentation-flask
-    #   opentelemetry-instrumentation-requests
-    #   opentelemetry-instrumentation-wsgi
-    #   opentelemetry-sdk
-opentelemetry-util-http==0.25b2
-    # via
-    #   opentelemetry-instrumentation-flask
-    #   opentelemetry-instrumentation-requests
-    #   opentelemetry-instrumentation-wsgi
 opentracing==2.4.0
-    # via jaeger-client
+    # via
+    #   flask-opentracing
+    #   jaeger-client
 packaging==21.2
     # via pytest
 pathspec==0.9.0
@@ -115,8 +71,6 @@ pluggy==1.0.0
     # via pytest
 prometheus-client==0.12.0
     # via -r requirements\common.in
-protobuf==3.19.1
-    # via googleapis-common-protos
 py==1.11.0
     # via pytest
 pycodestyle==2.8.0
@@ -134,15 +88,11 @@ regex==2021.11.2
 requests==2.26.0
     # via -r requirements\common.in
 six==1.16.0
-    # via
-    #   grpcio
-    #   thrift
+    # via thrift
 threadloop==1.0.2
     # via jaeger-client
 thrift==0.15.0
-    # via
-    #   jaeger-client
-    #   opentelemetry-exporter-jaeger-thrift
+    # via jaeger-client
 toml==0.10.2
     # via
     #   pylint
@@ -163,10 +113,7 @@ urllib3==1.26.7
 werkzeug==2.0.2
     # via flask
 wrapt==1.13.3
-    # via
-    #   astroid
-    #   deprecated
-    #   opentelemetry-instrumentation
+    # via astroid
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
