--- a/reference-app/frontend/requirements.txt
+++ b/reference-app/frontend/requirements.txt
@@ -12,14 +12,12 @@ click==8.0.3
     # via flask
 colorama==0.4.4
     # via click
-deprecated==1.2.13
-    # via opentelemetry-api
 flask==2
+    # via
+    #   -r requirements\common.in
+    #   flask-opentracing
+flask-opentracing==1.1.0
     # via -r requirements\common.in
-googleapis-common-protos==1.53.0
-    # via opentelemetry-exporter-jaeger-proto-grpc
-grpcio==1.41.1
-    # via opentelemetry-exporter-jaeger-proto-grpc
 idna==2.10
     # via requests
 itsdangerous==2.0.1
@@ -30,68 +28,20 @@ jinja2==3.0.2
     # via flask
 markupsafe==2.0.1
     # via jinja2
-opentelemetry-api==1.6.2
-    # via
-    #   -r requirements\common.in
-    #   opentelemetry-exporter-jaeger-proto-grpc
-    #   opentelemetry-exporter-jaeger-thrift
-    #   opentelemetry-instrumentation
-    #   opentelemetry-instrumentation-flask
-    #   opentelemetry-instrumentation-requests
-    #   opentelemetry-instrumentation-wsgi
-    #   opentelemetry-sdk
-opentelemetry-exporter-jaeger==1.6.2
-    # via -r requirements\common.in
-opentelemetry-exporter-jaeger-proto-grpc==1.6.2
-    # via opentelemetry-exporter-jaeger
-opentelemetry-exporter-jaeger-thrift==1.6.2
-    # via opentelemetry-exporter-jaeger
-opentelemetry-instrumentation==0.25b2
-    # via
-    #   -r requirements\common.in
-    #   opentelemetry-instrumentation-flask
-    #   opentelemetry-instrumentation-requests
-    #   opentelemetry-instrumentation-wsgi
-opentelemetry-instrumentation-flask==0.25b2
-    # via -r requirements\common.in
-opentelemetry-instrumentation-requests==0.25b2
-    # via -r requirements\common.in
-opentelemetry-instrumentation-wsgi==0.25b2
-    # via opentelemetry-instrumentation-flask
-opentelemetry-sdk==1.6.2
-    # via
-    #   -r requirements\common.in
-    #   opentelemetry-exporter-jaeger-proto-grpc
-    #   opentelemetry-exporter-jaeger-thrift
-opentelemetry-semantic-conventions==0.25b2
-    # via
-    #   opentelemetry-instrumentation-flask
-    #   opentelemetry-instrumentation-requests
-    #   opentelemetry-instrumentation-wsgi
-    #   opentelemetry-sdk
-opentelemetry-util-http==0.25b2
-    # via
-    #   opentelemetry-instrumentation-flask
-    #   opentelemetry-instrumentation-requests
-    #   opentelemetry-instrumentation-wsgi
 opentracing==2.4.0
-    # via jaeger-client
+    # via
+    #   flask-opentracing
+    #   jaeger-client
 prometheus-client==0.12.0
     # via -r requirements\common.in
-protobuf==3.19.1
-    # via googleapis-common-protos
 requests==2.23.0
     # via -r requirements\common.in
 six==1.16.0
-    # via
-    #   grpcio
-    #   thrift
+    # via thrift
 threadloop==1.0.2
     # via jaeger-client
 thrift==0.15.0
-    # via
-    #   jaeger-client
-    #   opentelemetry-exporter-jaeger-thrift
+    # via jaeger-client
 tornado==6.1
     # via
     #   jaeger-client
@@ -102,7 +52,3 @@ waitress==2.0.0
     # via -r requirements/production.in
 werkzeug==2.0.2
     # via flask
-wrapt==1.13.3
-    # via
-    #   deprecated
-    #   opentelemetry-instrumentation
