--- a/reference-app/frontend/requirements/common.in
+++ b/reference-app/frontend/requirements/common.in
@@ -2,9 +2,4 @@ flask==2
 requests
 jaeger-client 
 prometheus-client
-opentelemetry-api
-opentelemetry-sdk
-opentelemetry-instrumentation
-opentelemetry-instrumentation-flask
-opentelemetry-instrumentation-requests
-opentelemetry-exporter-jaeger
+flask-opentracing
