--- a/reference-app/backend/requirements.dev.txt
+++ b/reference-app/backend/requirements.dev.txt
@@ -32,6 +32,7 @@ flask==2
     #   -r requirements\common.in
     #   flask-opentracing
     #   flask-pymongo
+    #   prometheus-flask-exporter
 flask-opentracing==1.1.0
     # via -r requirements\common.in
 flask-pymongo==2.3.0
@@ -73,6 +74,10 @@ platformdirs==2.4.0
 pluggy==1.0.0
     # via pytest
 prometheus-client==0.12.0
+    # via
+    #   -r requirements\common.in
+    #   prometheus-flask-exporter
+prometheus-flask-exporter==0.18.5
     # via -r requirements\common.in
 py==1.11.0
     # via pytest
