--- a/reference-app/frontend/requirements.dev.txt
+++ b/reference-app/frontend/requirements.dev.txt
@@ -31,6 +31,7 @@ flask==2
     # via
     #   -r requirements\common.in
     #   flask-opentracing
+    #   prometheus-flask-exporter
 flask-opentracing==1.1.0
     # via -r requirements\common.in
 idna==3.3
@@ -70,6 +71,10 @@ platformdirs==2.4.0
 pluggy==1.0.0
     # via pytest
 prometheus-client==0.12.0
+    # via
+    #   -r requirements\common.in
+    #   prometheus-flask-exporter
+prometheus-flask-exporter==0.18.5
     # via -r requirements\common.in
 py==1.11.0
     # via pytest
