--- a/reference-app/frontend/requirements.txt
+++ b/reference-app/frontend/requirements.txt
@@ -16,6 +16,7 @@ flask==2
     # via
     #   -r requirements\common.in
     #   flask-opentracing
+    #   prometheus-flask-exporter
 flask-opentracing==1.1.0
     # via -r requirements\common.in
 idna==2.10
@@ -33,6 +34,10 @@ opentracing==2.4.0
     #   flask-opentracing
     #   jaeger-client
 prometheus-client==0.12.0
+    # via
+    #   -r requirements\common.in
+    #   prometheus-flask-exporter
+prometheus-flask-exporter==0.18.5
     # via -r requirements\common.in
 requests==2.23.0
     # via -r requirements\common.in
